PARSER-0/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComments
    TkPunto
    TkUminus

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     block -> TkOBlock sequencing TkCBlock
Rule 3     block -> TkOBlock TkDeclare declare_var sequencing TkCBlock
Rule 4     declare_var -> variables TkTwoPoints type TkSemicolon declare_var
Rule 5     declare_var -> variables TkTwoPoints type
Rule 6     variables -> TkId TkComma variables
Rule 7     variables -> TkId
Rule 8     array -> TkArray TkOBracket expression TkSoForth expression TkCBracket
Rule 9     op_array -> TkAtoi TkOpenPar TkId TkClosePar
Rule 10    op_array -> TkSize TkOpenPar TkId TkClosePar
Rule 11    op_array -> TkMin TkOpenPar TkId TkClosePar
Rule 12    op_array -> TkMax TkOpenPar TkId TkClosePar
Rule 13    op_array -> TkAtoi TkOpenPar array_exp TkClosePar
Rule 14    op_array -> TkSize TkOpenPar array_exp TkClosePar
Rule 15    op_array -> TkMin TkOpenPar array_exp TkClosePar
Rule 16    op_array -> TkMax TkOpenPar array_exp TkClosePar
Rule 17    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
Rule 18    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar
Rule 19    array_exp -> TkId TkOBracket expression TkCBracket
Rule 20    array_exp1 -> TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
Rule 21    array_exp1 -> TkOpenPar expression TkTwoPoints expression TkClosePar array_exp2
Rule 22    array_exp1 -> TkOpenPar expression TkTwoPoints expression TkClosePar
Rule 23    array_exp2 -> TkOBracket expression TkCBracket
Rule 24    type -> TkInt
Rule 25    type -> TkBool
Rule 26    type -> array
Rule 27    type -> TkInt TkComma type
Rule 28    type -> TkBool TkComma type
Rule 29    type -> array TkComma type
Rule 30    sequencing -> instruction TkSemicolon
Rule 31    sequencing -> instruction TkSemicolon sequencing
Rule 32    instruction -> assign_inst
Rule 33    instruction -> input_inst
Rule 34    instruction -> output_inst
Rule 35    instruction -> if_inst
Rule 36    instruction -> iteration_for_inst
Rule 37    instruction -> iteration_mult_guard_inst
Rule 38    instruction -> block
Rule 39    expression -> TkOpenPar expression TkClosePar
Rule 40    expression -> expression TkConcat expression
Rule 41    expression -> expression TkPlus expression
Rule 42    expression -> expression TkMinus expression
Rule 43    expression -> expression TkMult expression
Rule 44    expression -> expression TkDiv expression
Rule 45    expression -> expression TkMod expression
Rule 46    expression -> expression TkAnd expression
Rule 47    expression -> expression TkOr expression
Rule 48    expression -> expression TkLess expression
Rule 49    expression -> expression TkLeq expression
Rule 50    expression -> expression TkGreater expression
Rule 51    expression -> expression TkGeq expression
Rule 52    expression -> expression TkEqual expression
Rule 53    expression -> expression TkNEqual expression
Rule 54    expression -> TkMinus expression
Rule 55    expression -> TkNot expression
Rule 56    expression -> op_array
Rule 57    expression -> array_exp
Rule 58    expression -> TkString
Rule 59    expression -> TkId
Rule 60    expression -> TkNum
Rule 61    expression -> TkTrue
Rule 62    expression -> TkFalse
Rule 63    assign_inst -> TkId TkAsig expression assign1
Rule 64    assign_inst -> TkId TkAsig expression
Rule 65    assign1 -> TkComma expression assign1
Rule 66    assign1 -> TkComma expression
Rule 67    input_inst -> TkRead TkId
Rule 68    output_inst -> TkPrint expression
Rule 69    output_inst -> TkPrintln expression
Rule 70    if_inst -> TkIf expression TkArrow sequencing TkFi
Rule 71    if_inst -> TkIf expression TkArrow sequencing guards_inst TkFi
Rule 72    guards_inst -> TkGuard expression TkArrow sequencing
Rule 73    guards_inst -> TkGuard expression TkArrow sequencing guards_inst
Rule 74    iteration_for_inst -> TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
Rule 75    iteration_mult_guard_inst -> TkDo expression TkArrow sequencing TkOd
Rule 76    iteration_mult_guard_inst -> TkDo expression TkArrow sequencing guards_inst TkOd

Terminals, with rules where they appear

TkAnd                : 46
TkArray              : 8
TkArrow              : 70 71 72 73 74 75 76
TkAsig               : 63 64
TkAtoi               : 9 13
TkBool               : 25 28
TkCBlock             : 2 3
TkCBracket           : 8 19 23
TkClosePar           : 9 10 11 12 13 14 15 16 17 18 20 21 22 39
TkComma              : 6 27 28 29 65 66
TkComments           : 
TkConcat             : 40
TkDeclare            : 3
TkDiv                : 44
TkDo                 : 75 76
TkEqual              : 52
TkFalse              : 62
TkFi                 : 70 71
TkFor                : 74
TkGeq                : 51
TkGreater            : 50
TkGuard              : 72 73
TkId                 : 6 7 9 10 11 12 17 18 19 59 63 64 67 74
TkIf                 : 70 71
TkIn                 : 74
TkInt                : 24 27
TkLeq                : 49
TkLess               : 48
TkMax                : 12 16
TkMin                : 11 15
TkMinus              : 42 54
TkMod                : 45
TkMult               : 43
TkNEqual             : 53
TkNot                : 55
TkNum                : 60
TkOBlock             : 2 3
TkOBracket           : 8 19 23
TkOd                 : 75 76
TkOpenPar            : 9 10 11 12 13 14 15 16 17 18 20 21 22 39
TkOr                 : 47
TkPlus               : 41
TkPrint              : 68
TkPrintln            : 69
TkPunto              : 
TkRead               : 67
TkRof                : 74
TkSemicolon          : 4 30 31
TkSize               : 10 14
TkSoForth            : 8
TkString             : 58
TkTo                 : 74
TkTrue               : 61
TkTwoPoints          : 4 5 17 18 20 21 22
TkUminus             : 
error                : 

Nonterminals, with rules where they appear

array                : 26 29
array_exp            : 13 14 15 16 57
array_exp1           : 17 20
array_exp2           : 21
assign1              : 63 65
assign_inst          : 32
block                : 1 38 74
declare_var          : 3 4
expression           : 8 8 17 17 18 18 19 20 20 21 21 22 22 23 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55 63 64 65 66 68 69 70 71 72 73 74 74 75 76
guards_inst          : 71 73 76
if_inst              : 35
input_inst           : 33
instruction          : 30 31
iteration_for_inst   : 36
iteration_mult_guard_inst : 37
op_array             : 56
output_inst          : 34
sequencing           : 2 3 31 70 71 72 73 75 76
start                : 0
type                 : 4 5 27 28 29
variables            : 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) block -> . TkOBlock sequencing TkCBlock
    (3) block -> . TkOBlock TkDeclare declare_var sequencing TkCBlock

    TkOBlock        shift and go to state 3

    start                          shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> block .

    $end            reduce using rule 1 (start -> block .)


state 3

    (2) block -> TkOBlock . sequencing TkCBlock
    (3) block -> TkOBlock . TkDeclare declare_var sequencing TkCBlock
    (30) sequencing -> . instruction TkSemicolon
    (31) sequencing -> . instruction TkSemicolon sequencing
    (32) instruction -> . assign_inst
    (33) instruction -> . input_inst
    (34) instruction -> . output_inst
    (35) instruction -> . if_inst
    (36) instruction -> . iteration_for_inst
    (37) instruction -> . iteration_mult_guard_inst
    (38) instruction -> . block
    (63) assign_inst -> . TkId TkAsig expression assign1
    (64) assign_inst -> . TkId TkAsig expression
    (67) input_inst -> . TkRead TkId
    (68) output_inst -> . TkPrint expression
    (69) output_inst -> . TkPrintln expression
    (70) if_inst -> . TkIf expression TkArrow sequencing TkFi
    (71) if_inst -> . TkIf expression TkArrow sequencing guards_inst TkFi
    (74) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (75) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing TkOd
    (76) iteration_mult_guard_inst -> . TkDo expression TkArrow sequencing guards_inst TkOd
    (2) block -> . TkOBlock sequencing TkCBlock
    (3) block -> . TkOBlock TkDeclare declare_var sequencing TkCBlock

    TkDeclare       shift and go to state 5
    TkId            shift and go to state 14
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 16
    TkPrintln       shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 3

    sequencing                     shift and go to state 4
    instruction                    shift and go to state 6
    assign_inst                    shift and go to state 7
    input_inst                     shift and go to state 8
    output_inst                    shift and go to state 9
    if_inst                        shift and go to state 10
    iteration_for_inst             shift and go to state 11
    iteration_mult_guard_inst      shift and go to state 12
    block                          shift and go to state 13

state 4

    (2) block -> TkOBlock sequencing . TkCBlock

    TkCBlock        shift and go to state 21


state 5

    (3) block -> TkOBlock TkDeclare . declare_var sequencing TkCBlock
    (4) declare_var -> . variables TkTwoPoints type TkSemicolon declare_var
    (5) declare_var -> . variables TkTwoPoints type
    (6) variables -> . TkId TkComma variables
    (7) variables -> . TkId

    TkId            shift and go to state 24

    declare_var                    shift and go to state 22
    variables                      shift and go to state 23

state 6

    (30) sequencing -> instruction . TkSemicolon
    (31) sequencing -> instruction . TkSemicolon sequencing

    TkSemicolon     shift and go to state 25


state 7

    (32) instruction -> assign_inst .

    TkSemicolon     reduce using rule 32 (instruction -> assign_inst .)


state 8

    (33) instruction -> input_inst .

    TkSemicolon     reduce using rule 33 (instruction -> input_inst .)


state 9

    (34) instruction -> output_inst .

    TkSemicolon     reduce using rule 34 (instruction -> output_inst .)


state 10

    (35) instruction -> if_inst .

    TkSemicolon     reduce using rule 35 (instruction -> if_inst .)


state 11

    (36) instruction -> iteration_for_inst .

    TkSemicolon     reduce using rule 36 (instruction -> iteration_for_inst .)


state 12

    (37) instruction -> iteration_mult_guard_inst .

    TkSemicolon     reduce using rule 37 (instruction -> iteration_mult_guard_inst .)


state 13

    (38) instruction -> block .

    TkSemicolon     reduce using rule 38 (instruction -> block .)


state 14

    (63) assign_inst -> TkId . TkAsig expression assign1
    (64) assign_inst -> TkId . TkAsig expression

    TkAsig          shift and go to state 26


state 15

    (67) input_inst -> TkRead . TkId

    TkId            shift and go to state 27


state 16

    (68) output_inst -> TkPrint . expression
    (39) expression -> . TkOpenPar expression TkClosePar
    (40) expression -> . expression TkConcat expression
    (41) expression -> . expression TkPlus expression
    (42) expression -> . expression TkMinus expression
    (43) expression -> . expression TkMult expression
    (44) expression -> . expression TkDiv expression
    (45) expression -> . expression TkMod expression
    (46) expression -> . expression TkAnd expression
    (47) expression -> . expression TkOr expression
    (48) expression -> . expression TkLess expression
    (49) expression -> . expression TkLeq expression
    (50) expression -> . expression TkGreater expression
    (51) expression -> . expression TkGeq expression
    (52) expression -> . expression TkEqual expression
    (53) expression -> . expression TkNEqual expression
    (54) expression -> . TkMinus expression
    (55) expression -> . TkNot expression
    (56) expression -> . op_array
    (57) expression -> . array_exp
    (58) expression -> . TkString
    (59) expression -> . TkId
    (60) expression -> . TkNum
    (61) expression -> . TkTrue
    (62) expression -> . TkFalse
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (19) array_exp -> . TkId TkOBracket expression TkCBracket

    TkOpenPar       shift and go to state 29
    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkString        shift and go to state 34
    TkId            shift and go to state 35
    TkNum           shift and go to state 36
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 28
    op_array                       shift and go to state 32
    array_exp                      shift and go to state 33

state 17

    (69) output_inst -> TkPrintln . expression
    (39) expression -> . TkOpenPar expression TkClosePar
    (40) expression -> . expression TkConcat expression
    (41) expression -> . expression TkPlus expression
    (42) expression -> . expression TkMinus expression
    (43) expression -> . expression TkMult expression
    (44) expression -> . expression TkDiv expression
    (45) expression -> . expression TkMod expression
    (46) expression -> . expression TkAnd expression
    (47) expression -> . expression TkOr expression
    (48) expression -> . expression TkLess expression
    (49) expression -> . expression TkLeq expression
    (50) expression -> . expression TkGreater expression
    (51) expression -> . expression TkGeq expression
    (52) expression -> . expression TkEqual expression
    (53) expression -> . expression TkNEqual expression
    (54) expression -> . TkMinus expression
    (55) expression -> . TkNot expression
    (56) expression -> . op_array
    (57) expression -> . array_exp
    (58) expression -> . TkString
    (59) expression -> . TkId
    (60) expression -> . TkNum
    (61) expression -> . TkTrue
    (62) expression -> . TkFalse
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (19) array_exp -> . TkId TkOBracket expression TkCBracket

    TkOpenPar       shift and go to state 29
    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkString        shift and go to state 34
    TkId            shift and go to state 35
    TkNum           shift and go to state 36
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 43
    op_array                       shift and go to state 32
    array_exp                      shift and go to state 33

state 18

    (70) if_inst -> TkIf . expression TkArrow sequencing TkFi
    (71) if_inst -> TkIf . expression TkArrow sequencing guards_inst TkFi
    (39) expression -> . TkOpenPar expression TkClosePar
    (40) expression -> . expression TkConcat expression
    (41) expression -> . expression TkPlus expression
    (42) expression -> . expression TkMinus expression
    (43) expression -> . expression TkMult expression
    (44) expression -> . expression TkDiv expression
    (45) expression -> . expression TkMod expression
    (46) expression -> . expression TkAnd expression
    (47) expression -> . expression TkOr expression
    (48) expression -> . expression TkLess expression
    (49) expression -> . expression TkLeq expression
    (50) expression -> . expression TkGreater expression
    (51) expression -> . expression TkGeq expression
    (52) expression -> . expression TkEqual expression
    (53) expression -> . expression TkNEqual expression
    (54) expression -> . TkMinus expression
    (55) expression -> . TkNot expression
    (56) expression -> . op_array
    (57) expression -> . array_exp
    (58) expression -> . TkString
    (59) expression -> . TkId
    (60) expression -> . TkNum
    (61) expression -> . TkTrue
    (62) expression -> . TkFalse
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (19) array_exp -> . TkId TkOBracket expression TkCBracket

    TkOpenPar       shift and go to state 29
    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkString        shift and go to state 34
    TkId            shift and go to state 35
    TkNum           shift and go to state 36
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkAtoi          shift and go to state 39
    TkSize          shift and go to state 40
    TkMin           shift and go to state 41
    TkMax           shift and go to state 42

    expression                     shift and go to state 44
    op_array                       shift and go to state 32
    array_exp                      shift and go to state 33

state 19

    (74) iteration_for_inst -> TkFor . TkId TkIn expression TkTo expression TkArrow block TkRof

    TkId            shift and go to state 45


state 20

    (75) iteration_mult_guard_inst -> TkDo . expression TkArrow sequencing TkOd
    (76) iteration_mult_guard_inst -> TkDo . expression TkArrow sequencing guards_inst TkOd
    (39) expression -> . TkOpenPar expression TkClosePar
    (40) expression -> . expression TkConcat expression
    (41) expression -> . expression TkPlus expression
    (42) expression -> . expression TkMinus expression
    (43) expression -> . expression TkMult expression
    (44) expression -> . expression TkDiv expression
    (45) expression -> . expression TkMod expression
    (46) expression -> . expression TkAnd expression
    (47) expression -> . expression TkOr expression
    (48) expression -> . expression TkLess expression
    (49) expression -> . expression TkLeq expression
    (50) expression -> . expression TkGreater expression
    (51) expression -> . expression TkGeq expression
    (52) expression -> . expression TkEqual expression
    (53) expression -> . expression TkNEqual expression
    (54) expression -> . TkMinus expression
    (55) expression -> . TkNot expression
    (56) expression -> . op_array
    (57) expression -> . array_exp
    (58) expression -> . TkString
    (59) expression -> . TkId
    (60) expression -> . TkNum
    (61) expression -> . TkTrue
    (62) expression -> . TkFalse
    (9) op_array -> . TkAtoi TkOpenPar TkId TkClosePar
    (10) op_array -> . TkSize TkOpenPar TkId TkClosePar
    (11) op_array -> . TkMin TkOpenPar TkId TkClosePar
    (12) op_array -> . TkMax TkOpenPar TkId TkClosePar
    (13) op_array -> . TkAtoi TkOpenPar array_exp TkClosePar
    (14) op_array -> . TkSize TkOpenPar array_exp TkClosePar
    (15) op_array -> . TkMin TkOpenPar array_exp TkClosePar
    (16) op_array -> . TkMax TkOpenPar array_exp TkClosePar
    (17) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp1
    (18) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar
    (19) array_exp -> . TkId TkOBracket expression TkCBracket
